fixed overlapping nav buttons and text/title overlapping

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -92,25 +92,22 @@ main {
 				justify-content: space-between;
 				gap: 5px;
 				border-bottom: 1px solid white;
-				.button {
-					visibility: hidden;
-				}
-				&:hover .button {
-					visibility: visible;
+				&:hover .buttons {
+					display: flex;
 				}
 				& .title {
 					font-weight: 500;
-					width: 60%;
+					width: 100%;
 					outline: none;
 					border: none;
-					height: 25px;
+					height: 100%;
 					font-size: 17px;
 					color: white;
 					background-color: transparent;
 					padding-left: 10px;
 				}
 				.buttons {
-					display: flex;
+					display: none;
 					gap: 5px;
 				}
 			}
@@ -183,7 +180,8 @@ main {
 						}
 					}
 					& .text {
-						width: 60%;
+						width: 100%;
+						height: 100%;
 						background-color: transparent;
 						border: none;
 						color: white;
@@ -195,22 +193,25 @@ main {
 						-moz-user-select: none;
 						-ms-user-select: none;
 						user-select: none;
+						/* border: 1px solid black; */
 						&::placeholder {
 							color: rgba(255, 255, 255, 0.75);
 						}
 					}
 					& .buttons {
-						display: flex;
+						display: none;
+						align-items: center;
 						gap: 5px;
+						/* border: 1px solid purple; */
 					}
 					& .button {
 						/* width: 22px;
 						min-width: 22px;
 						height: 22px; */
-						visibility: hidden;
+						/* visibility: hidden; */
 					}
-					&:hover .button {
-						visibility: visible;
+					&:hover .buttons {
+						display: flex;
 					}
 				}
 			}
@@ -255,12 +256,12 @@ main {
 			color: white;
 			font-size: 13px;
 			/* background-color: rgb(16, 0, 163); */
-			transition: scale 0.1s;
+			/* transition: height 0.1s; */
 			&:hover {
-				scale: 1.1;
+				height: 26px;
 			}
 			&.active {
-				scale: 1.2;
+				height: 30px;
 			}
 		}
 		& #add_section {
